[package]
name = "webdev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.28", features = ["executor"] }
gloo = "0.9.0"
reqwest = "0.11.18"
serde = "1.0.183"
serde_json = "1.0.104"
stylist = "0.12.1"
trunk = "0.17.3"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
yew = { version = "0.20.0", features = ["csr"] }
